src/themes/default/src/scss/_inpage-navigation.scss
.bcl-inpage-navigation {
  top: map-get($spacers, 3); // needed for position-sticky
  background-color: $gray-100;

  h5 {
    font-weight: bold;
    margin-bottom: 0;
    padding: map-get($spacers, "3-5");
    border-bottom: 1px solid $gray-300;
  }
  ul {
    padding: map-get($spacers, "2-5");

    .nav-link {
      padding: map-get($spacers, 2);
      margin-bottom: map-get($spacers, 2);
    }
  }
}

